@@ -1,3 +1,8 @@
+2005-02-10  Sebastien Bacher  <seb128@debian.org>
+
+	* theme-thumbnailer.c: (main): fix the crash if the given theme 
+	is not correct (Closes: #153203).
+
 2005-02-09  Sebastien Bacher  <seb128@debian.org>
 
 	* theme-thumbnailer.c: (main): change back to the previous code,
